--- a/prototype-v1/src/SensorDash.module.css
+++ b/prototype-v1/src/SensorDash.module.css
@@ -1,21 +1,26 @@
 .sensorGroup {
-    display: flex;
+    /* display: flex;
     width: 658px;
     height: 260px;
     padding-left: 23px;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    gap: 150px;
+    gap: 150px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
 .sensorIcon {
+    position: absolute;
     width: 153px;
     height: 149px;
 }
 
 .colorPalette {
+    position: absolute;
     width: 355px;
     height: 260px;
 }
