--- a/prototype-v1/src/Knob.css
+++ b/prototype-v1/src/Knob.css
@@ -7,8 +7,8 @@
   cursor: pointer;
   transform: rotate(45deg); /* Keep the rotation */
   background-image: url('./assets/motor-widget.png');
-  top: 48%;  /* Center vertically */
-  left: 42%; /* Center horizontally */
+  top: 40%;  /* Center vertically */
+  left: 10%; /* Center horizontally */
   transform: translate(-50%, -50%) rotate(45deg); 
   transform-origin: 61% 45%;
   z-index: 1500;
@@ -17,14 +17,14 @@
 .motor-bckgnd {
   width: 141.5px; /*190*/
   height: 91.5px; /*91.5 -- 183*/
-  position: absolute;
-  top: 50%;  /* Center vertically */
-  left: 50%; /* Center horizontally */
+  position: relative;
+  top: 0%;  /* Center vertically */
+  left: 10%; /* Center horizontally */
   background-image: url('./assets/motor-speed-background.png');
   background-repeat: no-repeat;
   background-size: contain;
   border-radius: 50% 50% 0 0;
-  transform: translate(-50%, -50%); /* Center the .motor-bckgnd itself */
+  /* transform: translate(-50%, -50%);  */
   z-index: 1000;
 }
 
