--- a/prototype-v1/src/MotorDash.module.css
+++ b/prototype-v1/src/MotorDash.module.css
@@ -1,95 +1,67 @@
 /* MotorDash.module.css */
-  
-  .motorGroup {
-    display: grid;
-    grid-template-areas: 
-              "a a a"
-              "b c d";
-    align-items: center;
-    justify-content: space-around;
-    /* position: absolute; */
-    z-index: 10; 
-    top: 15%;
-    left: 0;
-    width: 50%;
-    height: 30%;
-    row-gap: 10px;
-    column-gap: 100px;
-  }
-  
-  .motorName {
-    position: absolute;
-    text-align: center;
-    top: 65%; 
-    left: 20%;
-    color: #FFFF;
-    grid-row-start: 1;
-    grid-row-end: 1;
-    grid-column-start: 2;
-    grid-column-end: 2;
-  }
-  
-  .goButton {
-    border-radius: 50%;
-    border: none;
-    width: 107px;
-    height: 107px;
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25);
-    transition: box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
-    outline: none;
-    cursor: pointer;
-    color: #405CB0;;
-    background-color: #FFFF;
-    text-align: center;
-    font-family: "Inter-Bold", Helvetica;
-    /* font-family: 'Space Grotesk', 'McLaren'; */
-    font-size: 30px;
-    font-weight: 700;
-    position: absolute;
-    top: 60%;
-    left: 40%;
-    grid-row-start: 2;
-    grid-row-end: 2;
-    grid-column-start: 1;
-    grid-column-end: 1;
-  }
-  
-  .goButton:active, .stopButton:active {
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
-    transform: translate(1px, 1px);
-  }
-  
-  .speedDial {
-    position: absolute;
-    top: 60%;  
-    left: 55%; 
-    grid-row-start: 2;
-    grid-row-end: 2;
-    grid-column-start: 2;
-    grid-column-end: 2;
-  }
-  
-  .stopButton {
-    border-radius: 50%;
-    border: none;
-    width: 107px;
-    height: 107px;
-    box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25);
-    transition: box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
-    outline: none;
-    cursor: pointer;
-    color: #405CB0;;
-    background-color: #FFFF;
-    text-align: center;
-    font-family: "Inter-Bold", Helvetica;
-    /* font-family: 'Space Grotesk', 'McLaren'; */
-    font-size: 30px;
-    font-weight: 700;
-    position: absolute;
-    top: 60%;  
-    left: 70%; 
-    grid-row-start: 2;
-    grid-row-end: 2;
-    grid-column-start: 3;
-    grid-column-end: 3;
-  }
+
+.motorGroup {
+  display: grid;
+  grid-template-areas:
+    "motorName motorName"
+    "speedDial buttons";
+  align-items: center;
+  justify-items: center;
+  z-index: 10;
+  position: relative;
+  top: 27%;
+  width: 100%; 
+  /* height: 50%;  */
+  row-gap: 0px; 
+  grid-template-rows: 30px 150px;
+}
+
+.motorName {
+  text-align: center;
+  color: #FFFF;
+  grid-area: motorName;
+}
+
+.speedDial {
+  grid-area: speedDial;
+  width: 141.5px; /*190*/
+  height: 91.5px; /*91.5 -- 183*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.buttons {
+  grid-area: buttons;
+  display: flex;
+  gap: 30px; 
+  justify-content: center;
+  align-items: center;
+}
+
+.goButton, .stopButton {
+  border-radius: 50%;
+  border: none;
+  width: 107px;
+  height: 107px;
+  box-shadow: 0 6px 6px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.1s ease-in-out, transform 0.1s ease-in-out;
+  outline: none;
+  cursor: pointer;
+  color: #405CB0;
+  background-color: #FFFF;
+  text-align: center;
+  font-family: "Inter-Bold", Helvetica;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.goButton:active, .stopButton:active {
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+  transform: translate(1px, 1px);
+}
+
+
+
+
+
