--- a/prototype-v1-jenn-experiments/src/CustomizationPage.module.css
+++ b/prototype-v1-jenn-experiments/src/CustomizationPage.module.css
@@ -8,23 +8,22 @@
     left: 49px;
     border-radius: 20px;
     z-index: 10000000;
-    background-color: #F5F5F5;
-    font-family: 'Space Grotesk';
+    background-color: #f5f5f5;
+    font-family: "Space Grotesk";
     font-size: 50px;
     font-weight: 700;
     line-height: 63.8px;
     text-align: center;
-    color: #D9D9D9;
+    color: #d9d9d9;
     padding-top: 15px;
-
 }
 
 .options {
     display: grid;
     grid-template-areas:
-    "a b"
-    "c d"
-    "e f";
+        "a b"
+        "c d"
+        "e f";
     justify-content: space-evenly;
     align-content: end;
     position: relative;
@@ -36,7 +35,7 @@
     position: relative;
     width: 600px;
     height: 200px;
-    background-color: #4D4D4D;
+    background-color: #4d4d4d;
     border-radius: 20px;
     display: flex;
     flex-direction: row;
@@ -57,7 +56,7 @@
 }
 
 .heading {
-    font-family: 'Space Grotesk';
+    font-family: "Space Grotesk";
     font-size: 48px;
     font-weight: 700;
     line-height: 0px;
@@ -68,7 +67,7 @@
 }
 
 .bodyText {
-    font-family: 'Space Grotesk';
+    font-family: "Space Grotesk";
     font-size: 20px;
     font-weight: 700;
     line-height: 1.5em;
@@ -76,7 +75,6 @@
     flex-shrink: 4;
     width: 400px;
     height: 60px;
-
 }
 
 .xOut {
@@ -87,13 +85,13 @@
     margin-top: 15px;
     width: 50px;
     height: 50px;
-    font-family: 'Space Grotesk';
+    font-family: "Space Grotesk";
     font-size: 45px;
     font-weight: 700;
     line-height: 0px;
     text-align: center;
-    color: #D9D9D9;
-    border-color: #F5F5F5;
+    color: #d9d9d9;
+    border-color: #f5f5f5;
 }
 
 .backButton {
@@ -104,11 +102,11 @@
     margin-top: 15px;
     width: 50px;
     height: 50px;
-    font-family: 'Space Grotesk';
+    font-family: "Space Grotesk";
     font-size: 45px;
     font-weight: 700;
     line-height: 0px;
     text-align: center;
-    color: #D9D9D9;
-    border-color: #F5F5F5;
+    color: #d9d9d9;
+    border-color: #f5f5f5;
 }
