--- a/prototype-v1-jenn-experiments/src/BluetoothUI.module.css
+++ b/prototype-v1-jenn-experiments/src/BluetoothUI.module.css
@@ -7,25 +7,21 @@
     justify-content: flex-end;
 }
 
-
-
-
-
-
-.connectButton, .helpButton, .settingsButton {
+.connectButton,
+.helpButton,
+.settingsButton {
     position: relative;
     width: 65px;
     height: 65px;
     gap: 0px;
     opacity: 0px;
-    background-color: #98AEDD;
+    background-color: #98aedd;
     z-index: 10;
     border-radius: 50%;
     margin-right: 10px;
     margin-top: 7px;
     border: 5px solid;
-    border-color: #405CB0;
+    border-color: #405cb0;
     box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.5);
     cursor: pointer;
-
 }
