--- a/prototype-v1-jenn-experiments/src/HelpDialog.module.css
+++ b/prototype-v1-jenn-experiments/src/HelpDialog.module.css
@@ -7,12 +7,12 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     z-index: 10000;
-    font-family: 'Space Grotesk';
-    color: #4D4D4D;
+    font-family: "Space Grotesk";
+    color: #4d4d4d;
     text-align: center;
     padding: 20px;
     display: flex;
@@ -28,13 +28,13 @@
     margin-top: 15px;
     width: 50px;
     height: 50px;
-    font-family: 'Space Grotesk';
+    font-family: "Space Grotesk";
     font-size: 45px;
     font-weight: 700;
     line-height: 0px;
     text-align: center;
-    color: #D9D9D9;
-    border-color: #F5F5F5;
+    color: #d9d9d9;
+    border-color: #f5f5f5;
 }
 
 .dialogContent {
