--- a/wildcatweb/src/RunMenu.module.css
+++ b/wildcatweb/src/RunMenu.module.css
@@ -48,3 +48,36 @@
     cursor: pointer;
 
 }
+
+.slotIndicators {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.indicator {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: #E4EAF6;
+    border: 2px solid #D9D9D9;
+}
+
+.indicator.configured {
+    background-color: #405CB0;
+}
+
+.indicator.current {
+    border-color: #FFFFFF;
+    border-width: 3px;
+}
+
+.menuContent {
+    margin-top: 20px;  /* Add space below the indicators */
+}
+.runButton:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
